added links to videos from 2013 and changed wording a little bit

--- a/talks/basti_und_dirk.yml
+++ b/talks/basti_und_dirk.yml
@@ -22,3 +22,5 @@ more_bio: |
   Basti (@tisba) hackt Ruby/Rails seit 2006 und ist seit dem Ende seines Studiums als Freiberufler unterwegs. Sein
   aktuelles Beschäftigungsfeld dreht sich neben der Entwicklung von Ruby/Rails Projekten um performante und skalierbare
   Systeme mit node.js.
+video:
+  http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_10:00_-_ruby_is_magic_-_dirk_breuer_-_sebastian_cohnen_-_1262.html
