--- a/talks/lucas_dohmen.yml
+++ b/talks/lucas_dohmen.yml
@@ -12,3 +12,5 @@ bio: |
   Lucas ist Teil des Core Teams der Open-Source NoSQL Datenbank ArangoDB. Er ist zudem im Open Source und Community
   Projekt hacken.in involviert. Du findest ihn auf so gut wie jedem Treffen der lokalen Usergroups für Ruby, JavaScript
   und NoSQL.
+video:
+  http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_15:15_-_oo_ohne_vererbung_-_lucas_dohmen_-_1271.html
