--- a/talks/mateus_armando.yml
+++ b/talks/mateus_armando.yml
@@ -12,3 +12,5 @@ bio: |
   Mateus is a computer scientist for the largest European telecom “Deutsche Telekom” and also a long-time RubyMotion
   hacker. My quotidian work activity is to help to still the data-hungry caused by the growing data volumes usage caused
   my smartphones and co.
+video:
+  http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_11:15_-_concurrency_matters_-_mateus_armando_-_1269.html
