--- a/talks/sebastian_schulze.yml
+++ b/talks/sebastian_schulze.yml
@@ -18,3 +18,5 @@ bio: |
   Rubyist, Cologne.rb-Gänger, heimlicher Python-Sympathisant,
   Home-Office-Cologne Barista in Training, pflegt gute Kontakte ins
   PHP-Lager und hat viel zu wenig Zeit, sein Elixir-Buch weiter zu lesen.
+video:
+  http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_15:15_-_deployment_ohne_ziepen_-_sebastian_schulze_-_1266.html
