--- a/talks/benedikt-voigt.yml
+++ b/talks/benedikt-voigt.yml
@@ -11,4 +11,5 @@ abstract: |
 bio: |
   Benedikt Voigt studied computer science and learned website programming at Amazon.com back in 1998, when they still were a small startup.
   Later he worked as a SAP consultant for 8 years. He survived it and came back to the fun part of life, to Ruby on Rails.
-
+video:
+  http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_11:45_-_sample_architecture_of_a_rails_b2b_platform_-_benedikt_voigt_-_1264.html
