--- a/talks/bodo_tasche.yml
+++ b/talks/bodo_tasche.yml
@@ -13,3 +13,5 @@ bio: |
   Bodo ist Neu-Berliner, Ex-Kölner, Ruby-Lover und redet gerne über alles. Wirklich alles. Aber am liebsten versucht er,
   Menschen dazu zu bringen, neues zu wagen und neue Freunde zu finden. Auf Twitter, Github und sonst wo findet man Ihn
   als bitboxer.
+video:
+  http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_10:30_-_weck_den_geek_in_dir_-_bodo_tasche_-_1261.html
